@@ -1,3 +1,8 @@
+2002-11-26  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* General.pm (parse_keyvalues): Add the ability to return array
+	values that are comma delimited and quoted. 
+
 2002-09-15  Tim Jenness  <timj@jach.hawaii.edu>
 
         -------------- Starlink Release 3.1-1 -------------------
